--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
   "require": {
     "php": ">=5.5.0",
     "oligriffiths/kodekit": "dev-develop"
+  },
+  "autoload": {
+    "files": ["autoload.php"]
   }
 }
