--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "timblr/kodekit": "dev-master"
+    "timble/kodekit": "dev-master"
   },
   "autoload": {
     "files": ["autoload.php"]
